fixed overlapping styling on signup page

--- a/src/components/SignUp/SignUp.module.css
+++ b/src/components/SignUp/SignUp.module.css
@@ -13,7 +13,8 @@
   flex-direction: column;
   justify-content: center;
   background-color: white;
-}
+  border-radius: 1rem;
+  }
 
 .logo {
   width: 275px;
@@ -192,11 +193,11 @@
 
 @media (min-width: 1200px) {
   .backgroundPhoto {
-    height: 100vh;
+    height: 100%;
   }
   .container {
     width: 40%;
     height: 100%;
-    padding: 0 5rem;
+    padding: 2rem 5rem;
   }
 }
